# CunnyWM

./: .gitignore  LICENSE  README.md  dwm.c  meson.build
src/: .#cunnywm.c  config.h  cunnywm.1  cunnywm.c
